Fixed spacing

--- a/src/components/visual/side-panel/side-panel.scss
+++ b/src/components/visual/side-panel/side-panel.scss
@@ -29,7 +29,7 @@
 
   .side-panel {
     @apply mvx:p-6 mvx:w-full mvx:flex mvx:overflow-hidden mvx:flex-col mvx:transition-all mvx:ease-in-out mvx:duration-200;
-    @apply mvx:rounded-tl-3xl mvx:rounded-tr-3xl mvx:backdrop-blur;
+    @apply mvx:rounded-tl-3xl mvx:rounded-tr-3xl mvx:backdrop-blur mvx:pb-0;
     transform: translateY(60vh);
     border: 1px solid var(--mvx-border-color-primary);
     background-color: var(--mvx-bg-color-primary);
